[package]
name = "lidar_sequence_viewer"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "png",
    "x11",
] }
bevy_embedded_assets = "0.7.0"
# async
futures-lite = "1.12.0"
# rendering
bytemuck = "1.12.3"
# interface
bevy_egui = "0.20"
rfd = "0.11.0"
# io
nom = "7.1.1"
# config
ron = "0.8"
serde = { version = "1", features = ["derive"] }
confy = { version = "0.5.1", features = ["ron_conf"], default-features = false }
# icon reexport
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
